--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ version = "0.1.0"
 [dependencies]
 clap = { version = "4.3.14", features = ["derive"] }
 nalgebra = "0.34.1"
+num = "0.4.3"
 rand = "0.9.2"
